# iVy-voxel-raytracer

./: .gitignore  CMakeLists.txt  CPM.cmake  README.md
libraries/glad_gl_core_43/: args.txt
libraries/glad_gl_core_43/include/glad/: gl.h
libraries/iVy_utils/include/: ivy_gl.h  ivy_log.h  ivy_time.h
libraries/iVy_utils/include/unused/: composite_pool.h  memory_pool.h
libraries/iVy_utils/src/: ivy_gl.cpp  memory_pool.cpp
src/: main.cpp
src/client/: camera.cpp  camera.h  client.cpp  client.h  context.cpp  context.h  gl_util.cpp  gl_util.h  gui.cpp  gui.h  renderer.cpp  renderer.h  world_view.cpp  world_view.h
src/client/gui/: chat.cpp  chat.h  debug.cpp  debug.h  gui.cpp.disa  pause_menu.cpp  pause_menu.h
src/client/renderers/: experimental_renderer.cpp  experimental_renderer.h  experimental_renderer_2.cpp  experimental_renderer_2.h  renderer.h  wide_tree_renderer.cpp  wide_tree_renderer.h
src/client/renderers/baseline/: wide_tree_renderer.cpp  wide_tree_renderer.h
src/client/renderers/experiment_1/: experimental_renderer.cpp
src/client/renderers/experiment_2/: experimental_renderer.cpp  experimental_renderer.h
src/client/shaders/: design  experimental_2.glsl  main_pass.glsl
src/client/shaders/baseline/: main_pass.glsl  main_pass_old.glsl
src/client/shaders/experiment_1/: postprocess_normals.glsl
src/client/shaders/experiment_2/: primary_ray.glsl  secondary_ray.glsl
src/client/shaders/experimental/: depth_prepass.glsl  minpool_horizontal.glsl  minpool_vertical.glsl  primary_ray.glsl
src/client/shaders/experimental_1/: primary_ray.glsl
src/client/shaders/experimental_2/: main_pass.glsl  main_pass_2.glsl
src/client/utils/: memory_pool.cpp  memory_pool.h  wide_tree.cpp  wide_tree.h
src/common/: chunk.cpp  chunk.h  console.cpp  heightmap.cpp  heightmap.h  log.h  materials.h  world.cpp  world.h  worldview.h
src/common/utils/: memory_pool.cpp  memory_pool.h
src/common/utils/unused/: binarytree.h  chunk_allocator.h  list.h  memory_pool.h  ordered_map.h  ordered_set.h  queue.h
src/common/world/: chunk.h  heightmap.cpp  voxel.h
src/server/: console.cpp  console.h  server.cpp  server.h  worldgen.cpp  worldgen.h
src/server/commands/: command.h
src/server/features/generators/: debug_generator.cpp  debug_generator.h  procedural_generator.cpp  procedural_generator.h
src/server/generators/: debug_generator.cpp  debug_generator.h  generator.h  procedural_generator.cpp  procedural_generator.h
tests/: test_memory_pool.cpp  test_memory_pool.cpp.disabled
